--- a/index.html
+++ b/index.html
@@ -8,24 +8,51 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="images/CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 
   <title>Josh's Portfolio Profile</title>
 </head>
 
 <body>
     <header>
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light customNav">
+    <a class="navbar-brand" href="#">Lernantino</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-primary btn-lg navCTA" href="#" role="button">Request Meeting</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- End navigation bar -->
 
     </header>
-
+  <!--Jumbotron-->  
     <div class="jumbotron photobackground">
         <div class="jumboCopy">
-          <h1 class="display-4">It's Time to Rock</h1>
-          <p class="lead">Rock Nation brings you the most headbanging shows on the planet. Click below to find tickets for
-            your favorite bands</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Buy Tickets</a>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Request Meeting</a>
+          <h2 class="display-4"><span style="background-color: #92CCCD">Cool Subtitle Here!</span></h2>
         </div>
     </div>
+  <!--End Jumbotron-->
 
     <section>
 
