underline nav links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Resume</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item button">
           <a class="btn btn-primary btn-lg navCTA" href="#" role="button">Request Meeting</a>
         </li>
       </ul>
