--- a/index.html
+++ b/index.html
@@ -53,6 +53,163 @@
         </div>
     </div>
   <!--End Jumbotron-->
+  <!--Project Section-->
+  <div class="container-fluid content">
+    <!--Row 1-->
+    <div class="row about1">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-2 col-md-2 col-sm-12 titles" id="abouttitle">
+        <h2>About Me</h2>
+       </div>
+       <!-- End card 1 -->
+ 
+       <!-- Card 2 -->
+       <div class="cardContainer col-lg-10 col-md-10 col-sm-12 aboutpara">
+        <p>Experienced senior associate primarily focussed on portfolio construction products, analysing, modelling and investing in alternative asset classes such as venture capital, litigation funding and secondaries and macro economic analysis. With a Bachelor of Science (BSc) focused in Financial Economics with Econometrics from University of Kent.</p>
+       </div>
+       <!-- End card 2 -->
+
+    </div>
+    <!--end of row 1-->
+    <!--Row 2-->
+    <div class="row projects1">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-2 col-md-2 col-sm-12 titles" id="projecttitle">
+        <h2>Project Work</h2>
+       </div>
+       <!-- End card 1 -->
+ 
+       <!-- Card 2 -->
+       <div class="cardContainer col-lg-10 col-md-10 col-sm-12">
+         <div class="card">
+           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
+           <div class="card-img-overlay">
+             <h5 class="card-title">Chicago, Illinois</h5>
+             <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
+             <a href="#" class="btn btn-primary">More Info</a>
+           </div>
+         </div>
+       </div>
+       <!-- End card 2 -->
+
+    </div>
+    <!--end of row 2-->
+
+    <!--row 3-->
+    <div class="row projects2">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+        
+      </div>
+      <!-- End card 1 -->
+
+      <!-- Card 2 -->
+      <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
+        <div class="card">
+          <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Chicago, Illinois</h5>
+            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 2 -->
+
+      <!-- Card 3 -->
+      <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
+        <div class="card">
+          <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Chicago, Illinois</h5>
+            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 3 -->
+
+    </div>
+    <!--end of row 3-->
+
+    <!--row 4-->
+    <div class="row projects3">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+        
+      </div>
+      <!-- End card 1 -->
+
+      <!-- Card 2 -->
+      <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
+        <div class="card">
+          <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Chicago, Illinois</h5>
+            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 2 -->
+
+      <!-- Card 3 -->
+      <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
+        <div class="card">
+          <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Chicago, Illinois</h5>
+            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 3 -->
+
+    </div>
+    <!--end of row 4-->
+
+    <!--Row 5-->
+    <div class="row contact1">
+
+      <!-- Col 1 -->
+      <div class="cardContainer col-2 titles" id="contacttitle">
+        <h2>Contact Me</h2>
+       </div>
+       <!-- End col 1 -->
+       <!-- Col 2 -->
+       <div class="cardContainer col-2 contactItem">
+        <h3>Telephone</h3>
+       </div>
+       <!-- End col 2 -->
+       <!-- Col 3 -->
+       <div class="cardContainer col-2 contactItem">
+        <h3>Website</h3>
+       </div>
+       <!-- End col 3 -->
+       <!-- Col 4 -->
+       <div class="cardContainer col-2 contactItem">
+        <h3>GitHub</h3>
+       </div>
+       <!-- End col 4 -->
+       <!-- Col 5 -->
+       <div class="cardContainer col-2 contactItem">
+        <h3>Linkedin</h3>
+       </div>
+       <!-- End col 5 -->
+       <!-- Col 6 -->
+       <div class="cardContainer col-2 contactItem">
+        <h3>Spotify</h3>
+       </div>
+       <!-- End col 6 -->            
+    </div>
+    <!--end of row 5-->
+
+  </div>
 
     <section>
 
@@ -61,6 +218,10 @@
     <footer>
 
     </footer>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 
