--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#abouttitle">About Me <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Work</a>
+          <a class="nav-link" href="#projecttitle">Work</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Me</a>
+          <a class="nav-link" href="#contacttitle">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Resume</a>
+          <a class="nav-link" href="#skillstitle">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/joshua-alexander-2b6bb6199/" target="_blank">Resume</a>
         </li>
         <li class="nav-item button">
           <a class="btn btn-primary btn-lg navCTA" href="#" role="button">Request Meeting</a>
@@ -48,13 +51,14 @@
   <!--Jumbotron-->  
     <div class="jumbotron photobackground">
         <div class="jumboCopy">
+          <img src="images/Profile Pic.jpeg" class="profilepic">
           <a class="btn btn-primary btn-lg" href="#" role="button">Request Meeting</a>
-          <h2 class="display-4"><span style="background-color: #92CCCD">Cool Subtitle Here!</span></h2>
+          <h2 class="display-4"><span style="background-color: #92CCCD">Joshua Alexander</span></h2>
         </div>
     </div>
   <!--End Jumbotron-->
   <!--Project Section-->
-  <div class="container-fluid content">
+  <section class="container-fluid content">
     <!--Row 1-->
     <div class="row about1">
 
@@ -85,7 +89,7 @@
        <div class="cardContainer col-lg-10 col-md-10 col-sm-12">
          <div class="card">
            <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
-           <div class="card-img-overlay">
+           <div class="card-img-overlay cardtext">
              <h5 class="card-title">Chicago, Illinois</h5>
              <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
              <a href="#" class="btn btn-primary">More Info</a>
@@ -110,7 +114,7 @@
       <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
-          <div class="card-img-overlay">
+          <div class="card-img-overlay cardtext">
             <h5 class="card-title">Chicago, Illinois</h5>
             <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
             <a href="#" class="btn btn-primary">More Info</a>
@@ -123,7 +127,7 @@
       <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
-          <div class="card-img-overlay">
+          <div class="card-img-overlay cardtext">
             <h5 class="card-title">Chicago, Illinois</h5>
             <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
             <a href="#" class="btn btn-primary">More Info</a>
@@ -148,7 +152,7 @@
       <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
-          <div class="card-img-overlay">
+          <div class="card-img-overlay cardtext">
             <h5 class="card-title">Chicago, Illinois</h5>
             <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
             <a href="#" class="btn btn-primary">More Info</a>
@@ -161,7 +165,7 @@
       <div class="cardContainer col-lg-5 col-md-5 col-sm-12">
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
-          <div class="card-img-overlay">
+          <div class="card-img-overlay cardtext">
             <h5 class="card-title">Chicago, Illinois</h5>
             <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
             <a href="#" class="btn btn-primary">More Info</a>
@@ -174,6 +178,60 @@
     <!--end of row 4-->
 
     <!--Row 5-->
+    <div class="row skills1">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-2 col-md-2 col-sm-12 titles" id="skillstitle">
+        <h2>Skills</h2>
+       </div>
+       <!-- End card 1 -->
+ 
+       <!-- Card 2 -->
+       <div class="cardContainer col-lg-10 col-md-10 col-sm-12">
+        <p>HTML</p>
+       </div>
+       <!-- End card 2 -->
+
+    </div>
+    <!--end of row 5-->
+    <!--Row 6-->
+    <div class="row skills2">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+       </div>
+       <!-- End card 1 -->
+ 
+       <!-- Card 2 -->
+       <div class="cardContainer col-lg-10 col-md-10 col-sm-12">
+        <p>CSS</p>
+       </div>
+       <!-- End card 2 -->
+
+    </div>
+    <!--end of row 6-->
+    <!--Row 7-->
+    <div class="row skills3">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+       </div>
+       <!-- End card 1 -->
+ 
+       <!-- Card 2 -->
+       <div class="cardContainer col-lg-10 col-md-10 col-sm-12">
+        <p>Javascript</p>
+       </div>
+       <!-- End card 2 -->
+
+    </div>
+    <!--end of row 7-->
+
+  </section>
+
+  <footer class="container-fluid content">
+ 
+    <!--Footer-->
     <div class="row contact1">
 
       <!-- Col 1 -->
@@ -183,41 +241,33 @@
        <!-- End col 1 -->
        <!-- Col 2 -->
        <div class="cardContainer col-2 contactItem">
-        <h3>Telephone</h3>
+        <a href="tel:07360187898">Telephone</a>
        </div>
        <!-- End col 2 -->
        <!-- Col 3 -->
        <div class="cardContainer col-2 contactItem">
-        <h3>Website</h3>
+        <a href="#" target="_blank">Website</a>
        </div>
        <!-- End col 3 -->
        <!-- Col 4 -->
        <div class="cardContainer col-2 contactItem">
-        <h3>GitHub</h3>
+        <a href="https://github.com/JAlexander94" target="_blank">GitHub</a>
        </div>
        <!-- End col 4 -->
        <!-- Col 5 -->
        <div class="cardContainer col-2 contactItem">
-        <h3>Linkedin</h3>
+        <a href="https://www.linkedin.com/in/joshua-alexander-2b6bb6199/" target="_blank">Linkedin</a>
        </div>
        <!-- End col 5 -->
        <!-- Col 6 -->
        <div class="cardContainer col-2 contactItem">
-        <h3>Spotify</h3>
+        <a href="#" target="_blank">Spotify</a>
        </div>
        <!-- End col 6 -->            
     </div>
-    <!--end of row 5-->
+    <!--end of footer-->
 
-  </div>
-
-    <section>
-
-    </section>
-
-    <footer>
-
-    </footer>
+  </footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
