adding links to more info buttons

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
          <div class="card">
            <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
            <div class="card-img-overlay cardtext">
-             <h5 class="card-title">Chicago, Illinois</h5>
-             <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
-             <a href="#" class="btn btn-primary">More Info</a>
+             <h5 class="card-title">Pre-Work project</h5>
+             <p class="card-text">Study guide project</p>
+             <a href="https://jalexander94.github.io/prework-study-guide/" class="btn btn-primary">More Info</a>
            </div>
          </div>
        </div>
@@ -115,9 +115,9 @@
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
           <div class="card-img-overlay cardtext">
-            <h5 class="card-title">Chicago, Illinois</h5>
-            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
-            <a href="#" class="btn btn-primary">More Info</a>
+            <h5 class="card-title">Mini Project 1</h5>
+            <p class="card-text">Making a contact page</p>
+            <a href="https://jalexander94.github.io/Lesson-3/" class="btn btn-primary">More Info</a>
           </div>
         </div>
       </div>
@@ -128,9 +128,9 @@
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
           <div class="card-img-overlay cardtext">
-            <h5 class="card-title">Chicago, Illinois</h5>
-            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
-            <a href="#" class="btn btn-primary">More Info</a>
+            <h5 class="card-title">Project 1</h5>
+            <p class="card-text">Making a webpage accessible</p>
+            <a href="https://jalexander94.github.io/Office-Hours-1/" class="btn btn-primary">More Info</a>
           </div>
         </div>
       </div>
@@ -153,8 +153,8 @@
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
           <div class="card-img-overlay cardtext">
-            <h5 class="card-title">Chicago, Illinois</h5>
-            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
+            <h5 class="card-title">Mini Project 2</h5>
+            <p class="card-text">Making another study guide</p>
             <a href="#" class="btn btn-primary">More Info</a>
           </div>
         </div>
@@ -166,9 +166,9 @@
         <div class="card">
           <img src="https://placehold.co/400x400" class="card-img img-fluid" alt="picture of drums concert">
           <div class="card-img-overlay cardtext">
-            <h5 class="card-title">Chicago, Illinois</h5>
-            <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
-            <a href="#" class="btn btn-primary">More Info</a>
+            <h5 class="card-title">Project 2</h5>
+            <p class="card-text">Making this website but without using bootstrap</p>
+            <a href="https://jalexander94.github.io/Portfolio-Page-OH2/" class="btn btn-primary">More Info</a>
           </div>
         </div>
       </div>
